# node-color-thief-rs

./: README.md  package.json
__tests__/: module.test.js
bench/: vs-color-thief.js
lib/: index.js
native/: Cargo.toml
native/src/: lib.rs
